--- a/page2/style.css
+++ b/page2/style.css
@@ -1,59 +1,115 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-/* section 1 */
-.section1 {
-  margin: auto;
-  border: 2px solid rgba(230, 0, 0, 0.5);
-  background-image: url("img/bg2.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  margin-bottom: 15px;
+
+/* all section */
+
+section {
+    margin-bottom: 15px;
 }
 
-.section1 > div {
-  margin-bottom: 10px;
+
+/* end section */
+
+
+/* section 1 */
+
+.section1 {
+    margin: auto;
+    border: 2px solid rgba(230, 0, 0, 0.5);
+    background-image: url("img/bg2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
+
+.section1>div {
+    margin-bottom: 10px;
 }
 
 #emot-health {
-  color: red;
+    color: red;
 }
 
 .nyawa {
-  font-size: small;
-  font-family: "Roboto", sans-serif;
-  color: #fff;
+    font-size: small;
+    font-family: "Roboto", sans-serif;
+    color: #fff;
 }
 
 .konten {
-  text-align: center;
+    text-align: center;
 }
 
+
 /* end section 1 */
+
 
 /* section 2 */
 
 .section2 {
-  font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
-.section2 > .serang > button {
-  border: none;
-  color: #fff;
-  background-color: red;
-  padding: 5px;
-  border-radius: 5px;
+.section2>.serang>button {
+    border: none;
+    color: #fff;
+    background-color: red;
+    padding: 5px;
+    border-radius: 5px;
 }
 
-.section2 > .serang > button:hover {
-  border: none;
-  color: #fff;
-  background-color: #8a1b13;
-  padding: 5px;
-  border-radius: 5px;
+.section2>.serang>button:hover {
+    border: none;
+    color: #fff;
+    background-color: #8a1b13;
+    padding: 5px;
+    border-radius: 5px;
 }
 
-.section2 > div {
-  margin-bottom: 20px;
+.section2>div {
+    margin-bottom: 20px;
 }
+
+
+/* end section 2 */
+
+
+/* section 3 */
+
+.section3 {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+}
+
+#section3>div {
+    margin-bottom: 10px;
+}
+
+.section3>.reloadButton>button {
+    border: none;
+    color: #fff;
+    background-color: greenyellow;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.section3>.reloadButton>button:hover {
+    border: none;
+    color: #fff;
+    background-color: green;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#collect {
+    text-decoration: none;
+    color: #fff;
+    padding: 10px;
+    background-color: greenyellow;
+    border-radius: 5px;
+}
+
+
+/* end section 3 */
